# 3M_DRM_GS_glTF

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
docs/: format_design.md  renderer_design.md  research_plan.md
scripts/: 3m_gs_renderer.html
scripts/ply2gltf_3m_multidrm/: .gitignore  CMakeLists.txt  LICENSE.upstream  README.md  UPSTREAM_README.md  UPSTREAM_USAGE.md  build.sh
scripts/ply2gltf_3m_multidrm/examples/: multi_object_multidrm.sh  static_multilayer_manifest.json  tango_cricket_layer_multidrm.sh  tango_cricket_layer_multidrm_manifest.json  tango_duo_layer_multidrm.sh  tango_duo_layer_multidrm_manifest.json
scripts/ply2gltf_3m_multidrm/include/: CircularBufferWriter.h  GaussianSplat.h  GltfWriter.h  MPEGGltfWriter.h  MultiFrameGaussianSplat.h  MultiFramePlyReader.h  PlyReader.h  StreamingCircularBufferWriter.h  StreamingMPEGGltfWriter.h  StreamingMultiFrameReader.h  ViewpointUtil.h
scripts/ply2gltf_3m_multidrm/src/: CircularBufferWriter.cpp  GltfWriter.cpp  MPEGGltfWriter.cpp  MultiFramePlyReader.cpp  PlyReader.cpp  StreamingCircularBufferWriter.cpp  StreamingMPEGGltfWriter.cpp  StreamingMultiFrameReader.cpp  main.cpp  merge_ply.cpp
scripts/scalable_ply_static/: README.md  layerize_static_gs.py
